gitops/ieee-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slides
  name: slides
  namespace: ieee-gitops-demo
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: slides
  type: ClusterIP
